[gd_scene load_steps=5 format=2]

[ext_resource path="res://Switch.gd" type="Script" id=1]
[ext_resource path="res://switch_on.png" type="Texture" id=2]
[ext_resource path="res://switch_off.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 20.0

[node name="Switch" type="Node2D" groups=[
"switch",
]]
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="switch_on" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="switch_off" type="Sprite" parent="."]
visible = false
texture = ExtResource( 3 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
